<resources>
    <string name="app_name">音视频监控</string>
    <string name="strInputAccHint">用户名</string>
    <string name="strInputPswHint">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="text_ack_msg">已读</string>
    <string name="opt_selfLogin">自动登录</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_picture">图片</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="upgrade_hint_updating">正在下载</string>
    <string name="upgrade_hint_no_update">已是最新版本</string>
    <string name="upgrade_hint_title">软件更新</string>
    <string name="upgrade_hint_content">检测到新版本，立即更新吗？</string>
    <string name="btn_upgrade">更新</string>
    <string name="btn_upgrade_later">稍后更新</string>
    <string name="btn_cancel">取消</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="company_name">杭州确信科技有限公司</string>
    <string name="already_download_map">您已经下载此地区最新版的离线地图,您可以在下载管理中查看</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新于：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="simple_chinese">简体中文</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="english">English</string>
    <string name="russian">Pусский</string>
    <string name="picture">照片</string>
    <string name="move_zoom">移动和缩放</string>
    <string name="ensure">确 定</string>
    <string name="port_setting">调试端口设置</string>
    <string name="now_port">当前端口:</string>
    <string name="log_lever">LOG输出级别</string>
    <string name="now_log_lever">当前级别:</string>
    <string name="log_isOpen">log存储开关</string>
    <string name="meiti_zhen">媒体帧记录开关</string>
    <string name="chuanshu_switch">传输信息开关</string>
    <string name="call_info_switch">通话码流信息开关</string>
    <string name="videotape">录像</string>
    <string name="record">录音</string>
    <string name="delect">删除</string>
    <string name="up">上传</string>
    <string name="gps_up_switch">GPS上传开关</string>
    <string name="gps_up_time">GPS上传间隔(重启生效)</string>
    <string name="now_gps_up_time">当前:</string>
    <string name="rtp_audio_switch">RTP语音传输开关</string>
    <string name="rtp_video_switch">RTP视频传输开关</string>
    <string name="tcp_audio_switch">TCP语音传输开关</string>
    <string name="tcp_video_switch">TCP视频传输开关</string>
    <string name="city_name">城市名称：</string>
    <string name="city_search">搜索</string>
    <string name="city_hit">请输入城市名称</string>
    <string name="yijing_dowm">已下载:--</string>
    <string name="began">开始</string>
    <string name="suspend">暂停</string>
    <string name="city_list">城市列表</string>
    <string name="download_management">下载管理</string>
    <string name="hot_city">热门城市</string>
    <string name="nationwide">全国</string>
    <string name="dowm_citys">已下载城市 </string>
    <string name="ptt_setting">PTT设置 </string>
    <string name="ptt_switch">桌面PTT键开关 </string>
    <string name="encode">编码 </string>
    <string name="now_encode">当前编码:H264</string>
    <string name="power_set">分辨率 </string>
    <string name="bite_set">比特率设置</string>
    <string name="fps_set">帧率设置</string>
    <string name="group">群组</string>
    <string name="leave">请假</string>
    <string name="tongdao_time">通道保活时间设置</string>
    <string name="now_tongdao_time">当前为:1s</string>
    <string name="auido_automatic_switch">语音自动接听开关</string>
    <string name="video_automatic_switch">视频自动接听开关</string>
    <string name="beluga_switch">BELUGA开关</string>
    <string name="audio_encode">语音编码</string>
    <string name="dabao_time">打包时长设置</string>
    <string name="now_dabao_time">当前为:60ms</string>
    <string name="audio_chili_switch">语音处理开关</string>
    <string name="aec_chili_switch">回音处理开关</string>
    <string name="aec_yanchi_switch">回音延迟设置</string>
    <string name="lvbo_yanchi_switch">高通滤波开关</string>
    <string name="zaosheng_yizhi_switch">噪声抑制开关</string>
    <string name="zidong_zengyi_switch">自动增益开关</string>
    <string name="audio_jihuo_switch">语音激活开关</string>
    <string name="group_call">组呼增益设置</string>
    <string name="now_group_call">当前为:6</string>
    <string name="single_call">单呼增益设置</string>
    <string name="work">工作</string>
    <string name="setting">设置</string>
    <string name="all_belong_group">全部归属组</string>
    <string name="loading">拼命加载中...</string>
    <string name="Province_name">省份名称</string>
    <string name="camera_group">摄像头选择</string>
    <string name="see_video">查看视频</string>
    <string name="ftp_setting">服务器设置</string>
    <string name="designation">名称</string>
    <string name="ftp_setting_save">服务器配置存储</string>
    <string name="input_ip_address">输入IP地址</string>
    <string name="ip_address">IP地址</string>
    <string name="ip_port">输入IP端口(0-65535间)</string>
    <string name="port">端口</string>
    <string name="FTP_setting">FTP设置</string>
    <string name="address">地址</string>
    <string name="account">账户</string>
    <string name="offine_map">离线地图</string>
    <string name="advnces_options">高级选项</string>
    <string name="user_setting">用户设置</string>
    <string name="log_off">注销登录</string>
    <string name="audio_handle">语音处理</string>
    <string name="meiti_tran">媒体传输</string>
    <string name="video_seting">视频配置</string>
    <string name="custom_call_seting">自定义设置</string>
    <string name="bebug_info">调试信息</string>
    <string name="cache_size">缓存大小</string>
    <string name="clean_cache">清理缓存</string>
    <string name="delect_chat_info">删除所有聊天记录</string>
    <string name="gps_setting">GPS设置</string>
    <string name="language_setting">语言设置</string>
    <string name="user_stutas2">在线</string>
    <string name="select_from_phone">从相册选择</string>
    <string name="meeting_name">会议名称</string>
    <string name="promoter">发起人：</string>
    <string name="date_time">日期时间：</string>
    <string name="issue">议题：</string>
    <string name="temp_metting">临时会议</string>
    <string name="video_single_call">视频单呼</string>
    <string name="user_name_a">用户名A</string>
    <string name="now_call">正在呼叫</string>
    <string name="trun_camera">转换摄像头</string>
    <string name="video_diaoyong">视频调用</string>
    <string name="video_metting">视频会商</string>
    <string name="now_call_user">主讲人员:空闲</string>
    <string name="call_time">通话时间：%s</string>
    <string name="look_over">查看</string>
    <string name="yuyue_meeting_nocation">预约会议通知</string>
    <string name="plese_choose_address">请选择有具体位置的地点</string>
    <string name="kindle_reminder">温馨提示</string>
    <string name="are_you_sure_add_ip">您确定增加该IP配置吗？</string>
    <string name="evidenc">证据</string>
    <string name="add_evidenc">添加证据</string>
    <string name="user_return">返回</string>
    <string name="finish">完成</string>
    <string name="input_debug">请输入调试指令</string>
    <string name="intercom_group_name">组名:</string>
    <string name="my_here">我在</string>
    <string name="intercom_group_send_call">对讲组内发起对讲</string>
    <string name="no_intent">没有可以使用的网络，请打开您的网络</string>
    <string name="now_take_user">主讲:空闲</string>
    <string name="now_take_user22">主讲:</string>
    <string name="enter_map">进入地图</string>
    <string name="refresh_time">更新于:</string>
    <string name="intercom_group">对讲组</string>
    <string name="you_open">您打开了</string>
    <string name="no_intent_to_map">当前无网络进入地图</string>
    <string name="refresh_compler">刷新完成</string>
    <string name="no_new_version">没有更新的版本</string>
    <string name="have_new_version">存在更新的版本，正在下载,请在通知栏查看下载进度</string>
    <string name="apk_began_down">移动呼叫开始下载</string>
    <string name="phone_no_sd">您的手机没有SD卡</string>
    <string name="check_software">正在检查当前软件版本</string>
    <string name="down_sussess">下载成功</string>
    <string name="now_login_wait">正在登录..</string>
    <string name="userName_notNull">账号不能为空</string>
    <string name="userPass_notNull">密码不能为空</string>
    <string name="you_password_err">您的密码有误,请重新输入</string>
    <string name="group_save_switch">组呼语音保存开关</string>
    <string name="you_delect_one_user">您删除了一个用户信息</string>
    <string name="you_user_no_err">您输入的用户不存在,请重新输入</string>
    <string name="item_to_up">此项已经置顶</string>
    <string name="APK_yijing_downing">APK已经在下载了，请在通知栏中查看下载进度</string>
    <string name="you_sure_update_apk">您确定进行软件更新吗？</string>
    <string name="sure">确定</string>
    <string name="you_sure_logoff">您确定注销登录当前账号吗？</string>
    <string name="sign">签到</string>
    <string name="take_task">执行任务</string>
    <string name="new_task">新任务</string>
    <string name="notice">通知</string>
    <string name="is_save_setting">是否需要保存更改设置?</string>
    <string name="you_sure_gai_ftp">您确定修该您的ftp配置吗？</string>
    <string name="ip_not_null">IP不能为空</string>
    <string name="port_irregular">端口输入不规范</string>
    <string name="ip_irregular">IP输入不规范</string>
    <string name="ip_set_success">您设置的IP信息成功</string>
    <string name="ip_set_fail">设置IP信息失败,请重试</string>
    <string name="delect_all_file">删除的文件不可恢复,您确定要全部删除吗?</string>
    <string name="cache_deletcomple">缓存已清除完毕</string>
    <string name="delect_all_chat">删除的记录不可恢复,您确定要全部删除吗?</string>
    <string name="all_chat_delect">所有聊天内容已清除</string>
    <string name="chose_language">请选择语言</string>
    <string name="not_know_uiCause">未捕捉的原因值:</string>
    <string name="normal">正常</string>
    <string name="no_distribution_number">未分配号码</string>
    <string name="Aimless_route">无目的路由</string>
    <string name="user_busy">用户忙</string>
    <string name="user_no_take">用户无应答(人不应答)</string>
    <string name="route_err">路由错误</string>
    <string name="refuse_equipment">设备拒绝</string>
    <string name="err_ip_call">错误IP地址过来的呼叫</string>
    <string name="normal_fuck">通常,未指定</string>
    <string name="temp_err">临时错误</string>
    <string name="resource_not_use">资源不可用(占线中)</string>
    <string name="err_call_num">不正确的呼叫参考号</string>
    <string name="bixuan_smsdishi">必选信息单元丢失</string>
    <string name="timer_time_out">定时器超时</string>
    <string name="user_refused">用户拒接</string>
    <string name="callde_stop">被叫停止</string>
    <string name="user_no_exist">用户不存在</string>
    <string name="user_close_phone">用户关机</string>
    <string name="Forced_stitches">强制拆线</string>
    <string name="Disconnect_switch">切换拆线</string>
    <string name="Call_collision">呼叫冲突</string>
    <string name="Can_not_be_connected">暂时无法接通</string>
    <string name="Authentication_Error">鉴权错误</string>
    <string name="need_Authentication">需要鉴权</string>
    <string name="sdp_chose_err">SDP选择错误</string>
    <string name="video_up">视频上传</string>
    <string name="real_time_video">实时视频</string>
    <string name="history_video">历史视频</string>
    <string name="Voice_call">语音呼叫</string>
    <string name="Video_call">视频呼叫</string>
    <string name="send_loction">发送位置</string>
    <string name="send_file">发送文档</string>
    <string name="send_video">发送录像</string>
    <string name="send_pic">发送图片</string>
    <string name="buildGroup">新建群组</string>
    <string name="groupName">群组名称</string>
    <string name="plessInputGroupName">请输入群组名称</string>
    <string name="groupNum">群组号码</string>
    <string name="plessInputGroupNum">号码建组时自动生成</string>
    <string name="groupManage">组管理</string>
</resources>