<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/cus_theme">

        <ImageView
            android:id="@+id/return_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@mipmap/new_ui_logo" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/cus_green"
            android:padding="10dp"
            android:text="@string/sure"
            android:textColor="@color/telfont_color_default"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/return_button"
            android:text="@string/buildGroup"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/groupNum"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/groupNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/plessInputGroupNum"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/groupName"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/groupName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/plessInputGroupName"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <!-- contact user list -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ListView
            android:id="@+id/list_view_user_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"></ListView>

        <TextView
            android:id="@+id/txt_dialog"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_gravity="center"
            android:background="@mipmap/bg_photo_default_mask3_1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30.0dip"
            android:visibility="invisible" />

        <!--        <com.ids.idtma.widgets.SideBar-->
        <!--            android:id="@+id/sild_bar"-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="center|right" />-->
    </FrameLayout>

</LinearLayout>